--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.10",
         "predis/predis": "^2.0",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-sitemap": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.13",
-        "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
