--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "laravel/ui": "^4.0",
         "livewire/livewire": "^2.10",
         "predis/predis": "^2.0",
+        "rap2hpoutre/laravel-log-viewer": "^2.2",
         "spatie/laravel-permission": "^5.5",
-        "spatie/laravel-sitemap": "^6.2"
+        "spatie/laravel-sitemap": "^6.2",
+        "statikbe/laravel-cookie-consent": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
