--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/livewire": "^2.10",
         "predis/predis": "^2.0",
         "rap2hpoutre/laravel-log-viewer": "^2.2",
+        "spatie/laravel-honeypot": "^4.3",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-sitemap": "^6.2",
         "statikbe/laravel-cookie-consent": "^1.4"
